Bug 34517 - UI: Texts in context menu 'Arrangement for chart lines' interchanged
Summary: UI: Texts in context menu 'Arrangement for chart lines' interchanged
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium minor
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2011-02-20 23:34 UTC by Rainer Bielefeld Retired
Modified: 2019-12-13 14:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
See original report! (210.00 KB, application/pdf)
2011-02-20 23:34 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-02-20 23:34:36 UTC
Created attachment 43587 [details]
See original report!

I found this with "LibreOffice 3.3.1 RC2 - WIN7  Home Premium (64bit) English UI  [OOO330m19 (build 7 / tag 3.3.1.1)]" during my tests for 
Bug 34431 - More symbols (crosses, circles) needed for data points in charts

Steps to reproduce:
1. open sample document "freestylesymbols" "from Bug 34431
  you should see line with coffee beans behind line with envelops
2. to get coffee beans in front:
   double click chart
3. Click a coffee bean, so that line becomes selectd (control points appear)
4. rightclick to get context menu, > Arrangement
   Expected: because line is backward, there should be "Forward"
   Actual: Text "Send backward"
5. Proceed:
   Expected: only possible action "Send Forward" should be done
   Actual: as expected

So the texts of the context menu "Arrangement" are interchanged 
  
I see the same problem with " Ooo 3.3.0  – WIN7  Home Premium  (64bit) German UI [OOO330m20 (build 9567)]"
Comment 1 André Schnabel 2011-08-02 09:58:19 UTC
confirmed using LibO 3.4.2 on Windows and Linux

quickly checking the string ID's in pootle, it seems that the implementation is wrong. I see no "backward" string used for an "forward" ID.

after some more analysis it seems, as if the order of series is wrong in
 calc/chart2/sourcetools/DiagramHelper.cxx lcl_moveSeriesOrCheckIfMoveIsAllowed
lines 1359 to 1361
Comment 2 André Schnabel 2011-08-02 10:52:23 UTC
taking this one, as the suggested fix really seems to solve the problem but I need to do some more testing
Comment 3 Björn Michaelsen 2011-12-23 13:26:24 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 4 retired 2013-05-03 21:41:20 UTC
Tested this. Still valid for LO 4.0.3.1 RC.

Removing André from "Assigned to:" since this has been open for over a year. Setting to new.

Feel free to re-take if you still want to work on this André.
Comment 5 QA Administrators 2015-03-04 02:22:57 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2015-03-24 14:04:17 UTC
Reproduced.

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI
Comment 7 Robinson Tryon (qubit) 2015-12-13 11:21:27 UTC Comment hidden (obsolete)
Comment 8 Thomas Lendo 2017-09-24 20:45:55 UTC
Reproduced with Version: 6.0.0.0.alpha0+
Build ID: 722161e26437b25adc449f773836d369bd0cb081
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: de-DE (de_DE.UTF-8); Calc: group
moggi's auto updater build, 2017-09-24
Comment 9 QA Administrators 2018-09-25 02:50:43 UTC Comment hidden (obsolete)
Comment 10 Gabor Kelemen (Collabora) 2019-12-06 10:25:28 UTC
Proposed patch: https://gerrit.libreoffice.org/84608
Comment 11 Commit Notification 2019-12-12 09:55:08 UTC
Kelemen Gábor committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6cdab5c92cecf90090ba72dfa6c22edf0d41028f

tdf#34517 Bring forward/backward in chart series switched

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2019-12-13 07:29:11 UTC
Kelemen Gábor committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/4f7f39a262c5db74285bc44798f438a431fa7210

tdf#34517 Bring forward/backward in chart series switched

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.