tdf#34517 Bring forward/backward in chart series switched

Turns out bringing a data series forward means its index
is increased while bringing backwards means decreasing it.

Since the bool MOVE_SERIES_FORWARD is defined as true in
ControllerCommandDispatch.cxx the condition here meant that
bringing forward decreased the index and MOVE_SERIES_BACKWARD
as false meant that bringing backward increased the index.

Now the commands do the expected series order change.

Change-Id: Ib49b301eacc227439b8fb3b0dc3513e59cbdc484
Reviewed-on: https://gerrit.libreoffice.org/84608
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 6cdab5c92cecf90090ba72dfa6c22edf0d41028f)
Reviewed-on: https://gerrit.libreoffice.org/85025